--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 
 <title>soundContainers</title>
 
-<script src="libraries/p5.js" type="text/javascript"></script>
-<script src="libraries/p5.dom.js" type="text/javascript"></script>
-<script src="libraries/p5.sound.js" type="text/javascript"></script>
+<script src="js/libraries/p5.js" type="text/javascript"></script>
+<script src="js/libraries/p5.dom.js" type="text/javascript"></script>
+<script src="js/libraries/p5.sound.js" type="text/javascript"></script>
+<script src="js/libraries/controlKit.js" type="text/javascript"></script>
 
-<script src="agent.js"></script>
-<script src="zone.js"></script>
-<script src="events.js"></script>
-<script src="sketch.js"></script>
+<script src="js/agent.js"></script>
+<script src="js/zone.js"></script>
+<script src="js/events.js"></script>
+<script src="js/sketch.js"></script>
 
 <style>
-    body {padding: 0; margin: 0;}
+    body {
+        padding: 0;
+        margin: 0;
+    }
 </style>
+
+<body></body>
